--- a/clientApp/src/app/shop/shop.component.html
+++ b/clientApp/src/app/shop/shop.component.html
@@ -1,5 +1,36 @@
-<ul>
-  <li class="list-unstyled" *ngFor="let product of products">
-    {{product.name}}
-  </li>
-</ul>
+<div class="container">
+  <div class="row">
+    <section class="col-3">
+      <h5 class="text-warning ms-3">Sort</h5>
+      <select class="form-select mb-4" (change)="onSortSelected($event)">
+
+      </select>
+
+
+      <h5 class="text-warning ms-3">Brands</h5>
+      <ul class="list-group my-3">
+
+      </ul>
+      <h5 class="text-warning ms-3">Types</h5>
+      <ul class="list-group my-3">
+
+      </ul>
+
+    </section>
+    <section class="col-9">
+      <div class="d-flex justify-content-between align-items-center pb-2">
+
+        <div class="d-flex mt-2">
+          <input (keyup.enter)="onSearch()" type="text" placeholder="Search" class="form-control me-2" #search>
+          <button (click)="onSearch()" class="btn btn-outline-primary mx-2">Search</button>
+          <button (click)="onReset()" class="btn btn-outline-success">Reset</button>
+        </div>
+      </div>
+      <div class="row row-cols-3 g-3 mb-4">
+        <div class="col" *ngFor="let product of products">
+          <app-product-item></app-product-item>
+        </div>
+      </div>
+    </section>
+  </div>
+</div>
