--- a/clientApp/src/app/shop/shop.component.html
+++ b/clientApp/src/app/shop/shop.component.html
@@ -28,7 +28,7 @@
       </div>
       <div class="row row-cols-3 g-3 mb-4">
         <div class="col" *ngFor="let product of products">
-          <app-product-item></app-product-item>
+          <app-product-item [product]="product"></app-product-item>
         </div>
       </div>
     </section>
