--- a/clientApp/src/app/shop/shop.component.html
+++ b/clientApp/src/app/shop/shop.component.html
@@ -11,12 +11,12 @@
 
       <h5 class="text-warning ms-3">Brands</h5>
       <ul class="list-group my-3">
-        <li class="list-group-item" *ngFor="let brand of brands" [class.active]="brand.id === brandIdSelected"
+        <li class="list-group-item" *ngFor="let brand of brands" [class.active]="brand.id === shopParams.brandId"
           [value]="brand.id" (click)="onBrandSelected(brand.id)">{{brand.name}}</li>
       </ul>
       <h5 class="text-warning ms-3">Types</h5>
       <ul class="list-group my-3">
-        <li class="list-group-item" *ngFor="let type of types" [class.active]="type.id === typeIdSelected"
+        <li class="list-group-item" *ngFor="let type of types" [class.active]="type.id === shopParams.typeId"
           [value]="type.id" (click)="onTypeSelected(type.id)">{{type.name}}</li>
       </ul>
 
@@ -36,8 +36,8 @@
         </div>
       </div>
       <div class="d-flex justify-content-center">
-        <pagination [boundaryLinks]="true" [totalItems]="77" previousText="&lsaquo;" nextText="&rsaquo;"
-          firstText="&laquo;" lastText="&raquo;">
+        <pagination [boundaryLinks]="true" [totalItems]="totalCount" previousText="&lsaquo;" nextText="&rsaquo;"
+          [itemsPerPage]="shopParams.pageSize" [maxSize]="10" firstText="&laquo;" lastText="&raquo;">
 
         </pagination>
       </div>
