--- a/clientApp/src/app/shop/shop.component.html
+++ b/clientApp/src/app/shop/shop.component.html
@@ -37,7 +37,8 @@
       </div>
       <div class="d-flex justify-content-center">
         <pagination [boundaryLinks]="true" [totalItems]="totalCount" previousText="&lsaquo;" nextText="&rsaquo;"
-          [itemsPerPage]="shopParams.pageSize" [maxSize]="10" firstText="&laquo;" lastText="&raquo;">
+          [itemsPerPage]="shopParams.pageSize" (pageChanged)="onPageChanged($event)" [maxSize]="10" firstText="&laquo;"
+          lastText="&raquo;">
 
         </pagination>
       </div>
