--- a/clientApp/src/app/shop/shop.component.html
+++ b/clientApp/src/app/shop/shop.component.html
@@ -24,6 +24,18 @@
     <section class="col-9">
       <div class="d-flex justify-content-between align-items-center pb-2">
 
+        <header *ngIf="totalCount && shopParams.pageNumber && shopParams.pageSize">
+          <span *ngIf="totalCount > 0">Showing
+            <strong>
+              {{(shopParams.pageNumber -1) * shopParams.pageSize + 1}} -
+              {{shopParams.pageNumber * shopParams.pageSize
+                      > totalCount
+                      ? totalCount
+                      : shopParams.pageNumber * shopParams.pageSize
+                  }}
+            </strong> of <strong>{{totalCount}}</strong> Results</span>
+          <span *ngIf="totalCount === 0">There are <strong>0</strong> results for this filter</span>
+        </header>
         <div class="d-flex mt-2">
           <input (keyup.enter)="onSearch()" type="text" placeholder="Search" class="form-control me-2" #search>
           <button (click)="onSearch()" class="btn btn-outline-primary mx-2">Search</button>
@@ -35,7 +47,7 @@
           <app-product-item [product]="product"></app-product-item>
         </div>
       </div>
-      <div class="d-flex justify-content-center">
+      <div class="d-flex justify-content-center" *ngIf="totalCount > 0">
         <pagination [boundaryLinks]="true" [totalItems]="totalCount" previousText="&lsaquo;" nextText="&rsaquo;"
           [itemsPerPage]="shopParams.pageSize" (pageChanged)="onPageChanged($event)" [maxSize]="10" firstText="&laquo;"
           lastText="&raquo;">
