--- a/clientApp/src/app/shop/shop.component.html
+++ b/clientApp/src/app/shop/shop.component.html
@@ -38,11 +38,8 @@
         </div>
       </div>
       <div class="d-flex justify-content-center" *ngIf="totalCount > 0">
-        <pagination [boundaryLinks]="true" [totalItems]="totalCount" previousText="&lsaquo;" nextText="&rsaquo;"
-          [itemsPerPage]="shopParams.pageSize" (pageChanged)="onPageChanged($event)" [maxSize]="10" firstText="&laquo;"
-          lastText="&raquo;">
-
-        </pagination>
+        <app-pager [totalCount]="totalCount" [pageSize]="shopParams.pageSize" [pageNumber]="shopParams.pageNumber"
+          (pageChanged)="onPageChanged($event)"></app-pager>
       </div>
     </section>
   </div>
